@@ -31,14 +31,14 @@ install: ${PKGNAME}.desktop
 	mkdir -p $(INSTROOT)$(PKGDATADIR)/pixmaps
 	mkdir -p $(INSTROOT)/usr/share/applications
 	mkdir -p $(INSTROOT)/usr/share/icons/hicolor/48x48/apps
-	install src/*.py $(INSTROOT)$(PKGDATADIR)
+	install -m644 src/*.py $(INSTROOT)$(PKGDATADIR)
 	install src/${PKGNAME} $(INSTROOT)$(PKGDATADIR)/${PKGNAME}
-	install src/system-config-kdump.glade $(INSTROOT)$(PKGDATADIR)
-	install pixmaps/*.png $(INSTROOT)$(PKGDATADIR)/pixmaps
-	install pixmaps/${PKGNAME}.png $(INSTROOT)/usr/share/icons/hicolor/48x48/apps
-	install ${PKGNAME}.pam $(INSTROOT)$(PAMD_DIR)/${PKGNAME}
-	install ${PKGNAME}.console $(INSTROOT)$(SECURITY_DIR)/${PKGNAME}
-	install ${PKGNAME}.desktop $(INSTROOT)/usr/share/applications/${PKGNAME}.desktop
+	install -m644 src/system-config-kdump.glade $(INSTROOT)$(PKGDATADIR)
+	install -m644 pixmaps/*.png $(INSTROOT)$(PKGDATADIR)/pixmaps
+	install -m644 pixmaps/${PKGNAME}.png $(INSTROOT)/usr/share/icons/hicolor/48x48/apps
+	install -m644 ${PKGNAME}.pam $(INSTROOT)$(PAMD_DIR)/${PKGNAME}
+	install -m644 ${PKGNAME}.console $(INSTROOT)$(SECURITY_DIR)/${PKGNAME}
+	install -m644 ${PKGNAME}.desktop $(INSTROOT)/usr/share/applications/${PKGNAME}.desktop
 	ln -sf consolehelper $(INSTROOT)/usr/bin/${PKGNAME}
 	for d in $(SUBDIRS); do \
 	(cd $$d; $(MAKE) INSTROOT=$(INSTROOT) MANDIR=$(MANDIR) install) \
