@@ -1,7 +1,7 @@
 Summary: A graphical interface for configuring kernel crash dumping
 Name: system-config-kdump
-Version: 1.0.4
-Release: 1
+Version: 1.0.5
+Release: 1%{?dist}
 URL: http://fedora.redhat.com/projects/config-tools/
 License: GPL
 Group: System Environment/Base
@@ -17,8 +17,8 @@ Requires: usermode >= 1.36
 Requires: rhpl >= 0.185-1
 Requires: redhat-artwork >= 0.61-1
 Requires: kexec-tools
-Prereq: gtk2 >= 2.8.20
-PreReq: hicolor-icon-theme
+Requires(pre): gtk2 >= 2.8.20
+Requires(pre): hicolor-icon-theme
 
 %description
 system-config-kdump is a graphical tool for configuring kernel crash
@@ -38,15 +38,10 @@ desktop-file-install --vendor system --delete-original       \
   --add-category X-Red-Hat-Base                             \
   $RPM_BUILD_ROOT%{_datadir}/applications/system-config-kdump.desktop
 
-%find_lang %name
+%find_lang %{name}
 
 %clean
 rm -rf $RPM_BUILD_ROOT
-
-%preun
-if [ -d /usr/share/system-config-kdump ] ; then
-  rm -rf /usr/share/system-config-kdump/*.pyc
-fi
 
 %postun
 touch --no-create %{_datadir}/icons/hicolor
@@ -62,15 +57,23 @@ fi
 
 
 %files -f %{name}.lang
-%defattr(-,root,root)
+%defattr(-,root,root,-)
 %{_bindir}/system-config-kdump
 %{_datadir}/system-config-kdump
 %{_datadir}/applications/*
-%attr(0644,root,root) %config /etc/security/console.apps/system-config-kdump
-%attr(0644,root,root) %config /etc/pam.d/system-config-kdump
+%attr(0644,root,root) %config(noreplace) /etc/security/console.apps/system-config-kdump
+%attr(0644,root,root) %config(noreplace) /etc/pam.d/system-config-kdump
 %attr(0644,root,root) %{_datadir}/icons/hicolor/48x48/apps/system-config-kdump.png
 
 %changelog
+* Thu Oct 26 2006 Dave Lehman <dlehman@redhat.com> 1.0.5-1
+- fix install make target to specify modes where needed
+- remove unnecessary %%preun
+- various specfile fixes to appease rpmlint
+
+* Thu Oct 26 2006 Dave Lehman <dlehman@redhat.com> 1.0.4-2
+- fix path to icon in glade file
+
 * Tue Oct 24 2006 Dave Lehman <dlehman@redhat.com> 1.0.4-1
 - all location types now in combo box (no text entry for type)
 - preserve comment lines from kdump.conf instead of writing config header
